Added an edit screen. Also added delete button. Still needs some more testing.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".setSize">
-
+        <activity android:name=".setSize"/>
+        <activity android:name=".editSize">
         </activity>
     </application>
 
